--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,194 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Contact — HIGH CHOICE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png">
+
 <style>
-body{margin:0;background:#050814;color:white;padding:20px;font-family:'Poppins';}
-h1{text-align:center;color:#b9aaff;margin-bottom:20px;}
-p{color:#c7c9d9;}
+:root{
+  --bg:#0e0f19;
+  --text:#ffffff;
+  --muted:#bfbfd2;
+  --accent:#7ee2ff;
+  --card:rgba(255,255,255,0.08);
+}
+
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  background:var(--bg);
+  font-family:"Poppins",system-ui,Roboto;
+  color:var(--text);
+}
+
+header{
+  padding:14px 18px;
+  display:flex;justify-content:space-between;align-items:center;
+  background:rgba(0,0,0,0.35);
+  border-bottom:1px solid rgba(255,255,255,0.05);
+  backdrop-filter:blur(8px);
+  position:sticky;top:0;z-index:999;
+}
+
+.logo{display:flex;gap:10px;align-items:center}
+.logo img{height:36px}
+.logo span{font-size:18px;font-weight:700;color:var(--accent)}
+
+.menu-btn{
+  width:40px;height:40px;border-radius:8px;
+  background:rgba(255,255,255,0.08);
+  display:flex;align-items:center;justify-content:center;
+  cursor:pointer;font-size:20px;
+}
+
+#drawer{
+  position:fixed;right:-100%;top:0;height:100%;width:72%;
+  max-width:320px;background:#070b12;
+  padding:22px;transition:.34s;z-index:998;
+}
+#drawer.open{right:0}
+#drawer a{
+  display:block;color:var(--text);
+  padding:12px 6px;text-decoration:none;
+  border-bottom:1px solid rgba(255,255,255,0.06);
+  font-weight:600;
+}
+
+main{
+  padding:20px;max-width:900px;margin:auto;
+}
+
+h1{
+  text-align:center;font-size:30px;font-weight:800;
+  color:var(--accent);margin:20px 0 16px;
+}
+
+.section{
+  background:var(--card);
+  padding:20px;border-radius:16px;
+  border:1px solid rgba(255,255,255,0.05);
+  margin-bottom:20px;line-height:28px;
+}
+
+h2{
+  margin-bottom:10px;font-size:22px;font-weight:700;
+  color:var(--accent);
+}
+
+label{
+  display:block;margin:12px 0 6px;font-weight:600;color:var(--muted);
+}
+
+input,textarea{
+  width:100%;padding:12px;border-radius:12px;
+  border:none;background:rgba(255,255,255,0.1);
+  color:var(--text);font-size:15px;margin-bottom:12px;
+}
+textarea{min-height:120px;resize:vertical}
+
+.btn{
+  width:100%;padding:14px;border-radius:12px;border:none;
+  background:var(--accent);color:#000;font-weight:800;
+  font-size:16px;margin-top:8px;cursor:pointer;
+}
+
+.info-card{
+  background:rgba(255,255,255,0.05);
+  padding:18px;border-radius:12px;
+  border:1px solid rgba(255,255,255,0.06);
+  margin-top:10px;line-height:26px;
+}
+
+footer{
+  text-align:center;color:var(--muted);
+  padding:26px 10px;margin-top:20px;
+}
 </style>
 </head>
 
 <body>
 
-<h1>Contact Us</h1>
+<header>
+  <div class="logo">
+    <img src="highchoice_logo.png">
+    <span>HIGH CHOICE</span>
+  </div>
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+</header>
 
-<p><b>Email:</b> support@highchoice.in</p>
-<p><b>WhatsApp Support:</b> Available 10 AM – 8 PM</p>
+<nav id="drawer">
+  <a href="index.html">Home</a>
+  <a href="men.html">Men</a>
+  <a href="women.html">Women</a>
+  <a href="kids.html">Kids</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="return.html">Return & Replace</a>
+</nav>
+
+<main>
+
+  <h1>Contact Us</h1>
+
+  <section class="section">
+    <h2>Get in Touch</h2>
+
+    <label>Your Name</label>
+    <input id="name" type="text" placeholder="Full Name">
+
+    <label>Phone Number</label>
+    <input id="phone" type="tel" placeholder="Phone Number">
+
+    <label>Your Message</label>
+    <textarea id="msg" placeholder="Write your message..."></textarea>
+
+    <button class="btn" onclick="sendMessage()">Send on WhatsApp</button>
+  </section>
+
+  <section class="section">
+    <h2>Store Information</h2>
+
+    <div class="info-card">
+      <p><strong>Phone:</strong> +91 78692 88078</p>
+      <p><strong>Working Hours:</strong> 10:00 AM – 9:00 PM</p>
+      <p><strong>Email:</strong> support@highchoice.in</p>
+      <p><strong>Location:</strong> India</p>
+    </div>
+  </section>
+
+</main>
+
+<footer>
+  © 2025 HIGH CHOICE — All Rights Reserved
+</footer>
+
+<script>
+function toggleMenu(){
+  document.getElementById('drawer').classList.toggle('open');
+}
+
+const clientNumber = "917869288078";
+
+function sendMessage(){
+  let name = document.getElementById("name").value.trim();
+  let phone = document.getElementById("phone").value.trim();
+  let msg = document.getElementById("msg").value.trim();
+
+  if(!name || !phone || !msg){
+    alert("Please fill all fields");
+    return;
+  }
+
+  let text =
+    `New Contact Query%0A%0A` +
+    `Name: ${encodeURIComponent(name)}%0A` +
+    `Phone: ${encodeURIComponent(phone)}%0A` +
+    `Message: ${encodeURIComponent(msg)}`;
+
+  window.open(`https://wa.me/${clientNumber}?text=${text}`, "_blank");
+}
+</script>
 
 </body>
 </html>
