--- a/order.html
+++ b/order.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Complete Your Order – HIGH CHOICE</title>
+<title>Place Order – HIGH CHOICE</title>
 <link rel="icon" type="image/png" href="favicon.png">
 
 <style>
@@ -11,71 +11,91 @@
   --bg:#0e0f19;
   --text:#ffffff;
   --muted:#bfbfd2;
-  --accent:#7ee2ff;
-  --card:rgba(255,255,255,0.08);
+  --accent:#7effc9;
+  --card:rgba(255,255,255,0.12);
 }
-*{margin:0;padding:0;box-sizing:border-box}
+
 body{
   background:var(--bg);
-  font-family:"Poppins",system-ui,Roboto,Arial;
   color:var(--text);
+  font-family:"Poppins",system-ui;
+  margin:0;
+  padding:0;
 }
 
 header{
-  padding:14px 18px;
-  display:flex;justify-content:space-between;align-items:center;
-  background:rgba(0,0,0,0.35);
+  padding:16px;
+  text-align:center;
+  background:rgba(0,0,0,0.32);
+  border-bottom:1px solid rgba(255,255,255,0.1);
   backdrop-filter:blur(8px);
-  border-bottom:1px solid rgba(255,255,255,0.05);
-  position:sticky;top:0;
 }
-.logo{display:flex;gap:10px;align-items:center}
-.logo img{height:36px}
-.logo span{color:var(--accent);font-size:18px;font-weight:700}
+header img{height:42px}
 
 main{
-  padding:20px;max-width:600px;margin:auto;
+  max-width:500px;
+  margin:auto;
+  padding:20px;
 }
 
 h2{
-  text-align:center;font-size:26px;
-  font-weight:800;color:var(--accent);margin-bottom:12px;
+  color:var(--accent);
+  font-size:26px;
+  text-align:center;
+  margin-bottom:20px;
 }
 
-.card{
+.form-box{
   background:var(--card);
-  padding:20px;border-radius:16px;
-  border:1px solid rgba(255,255,255,0.06);
+  padding:20px;
+  border-radius:16px;
+  border:1px solid rgba(255,255,255,0.08);
 }
 
 label{
-  display:block;font-weight:600;margin:10px 0 4px;
+  display:block;
+  margin-top:15px;
+  font-size:15px;
 }
 
-input,select,textarea{
-  width:100%;padding:12px;border-radius:10px;
-  border:none;margin-bottom:14px;
-  background:rgba(255,255,255,0.12);
-  color:var(--text);font-size:15px;
+input{
+  width:100%;
+  padding:12px;
+  margin-top:6px;
+  border:none;
+  border-radius:10px;
+  background:rgba(255,255,255,0.15);
+  color:white;
 }
-
-textarea{height:100px;resize:none}
 
 .radio-group{
-  display:flex;gap:20px;margin:10px 0 16px;
+  margin-top:14px;
+}
+.radio-group label{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-bottom:8px;
 }
 
 .btn{
-  width:100%;padding:14px;border-radius:12px;border:none;
-  background:var(--accent);color:#000;font-weight:800;
-  font-size:16px;cursor:pointer;margin-top:10px;
+  width:100%;
+  padding:14px;
+  margin-top:20px;
+  border:none;
+  border-radius:12px;
+  background:var(--accent);
+  color:#000;
+  font-weight:800;
+  cursor:pointer;
+  font-size:16px;
 }
 
-.hidden{display:none}
-
 footer{
-  text-align:center;color:var(--muted);
-  padding:26px 10px;margin-top:20px;
+  text-align:center;
+  color:var(--muted);
+  margin-top:30px;
+  padding:20px;
 }
 </style>
 </head>
@@ -83,77 +103,74 @@ footer{
 <body>
 
 <header>
-  <div class="logo">
-    <img src="highchoice_logo.png">
-    <span>HIGH CHOICE</span>
-  </div>
+  <img src="highchoice_logo.png">
 </header>
 
 <main>
 
-  <h2>Complete Your Order</h2>
+<h2>Complete Your Order</h2>
 
-  <div class="card">
+<div class="form-box">
 
-    <label>Product</label>
-    <input id="productName" type="text" readonly>
+  <!-- CUSTOMER NAME -->
+  <label>Full Name</label>
+  <input type="text" id="customerName" placeholder="Enter your full name">
 
-    <label>Price (₹)</label>
-    <input id="productPrice" type="text" readonly>
+  <!-- CUSTOMER PHONE -->
+  <label>Phone Number</label>
+  <input type="tel" id="customerPhone" placeholder="Enter your phone number">
 
-    <label>Your Name</label>
-    <input id="name" type="text" placeholder="Full Name">
+  <!-- ADDRESS -->
+  <label>Address</label>
+  <input type="text" id="customerAddress" placeholder="Enter full address">
 
-    <label>Phone Number</label>
-    <input id="phone" type="number" placeholder="Phone Number">
-
-    <label>Full Address</label>
-    <textarea id="address" placeholder="House no, Area, City, Pincode"></textarea>
-
-    <label>Payment Method</label>
-    <div class="radio-group">
-      <label><input type="radio" name="pay" value="COD" checked> COD</label>
-      <label><input type="radio" name="pay" value="Prepaid"> Prepaid</label>
-    </div>
-
-    <button class="btn" onclick="placeOrder()">Place Order</button>
-
+  <!-- PAYMENT METHOD -->
+  <label style="margin-top:20px;">Choose Payment Method</label>
+  <div class="radio-group">
+    <label><input type="radio" name="payment" value="cod" checked> Cash on Delivery (COD)</label>
+    <label><input type="radio" name="payment" value="prepaid"> Prepaid (UPI Payment)</label>
   </div>
+
+  <button class="btn" onclick="placeOrder()">Place Order</button>
+
+</div>
+
 </main>
 
 <footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
 
 <script>
-// Load product details
+// GET PRODUCT DETAILS FROM URL
 const url = new URLSearchParams(window.location.search);
-document.getElementById("productName").value = url.get("model");
-document.getElementById("productPrice").value = url.get("price");
+const product = url.get("model") || "Unknown Product";
+const price   = url.get("price") || "0";
 
-// Submit order
+// PROCESS ORDER
 function placeOrder(){
-  let name = document.getElementById("name").value;
-  let phone = document.getElementById("phone").value;
-  let address = document.getElementById("address").value;
-  let product = document.getElementById("productName").value;
-  let price = document.getElementById("productPrice").value;
-  let pay = document.querySelector("input[name='pay']:checked").value;
 
-  if(!name || !phone || !address){
-    alert("Please fill all details");
+  let name    = document.getElementById("customerName").value.trim();
+  let phone   = document.getElementById("customerPhone").value.trim();
+  let address = document.getElementById("customerAddress").value.trim();
+  let payment = document.querySelector("input[name='payment']:checked").value;
+
+  // VALIDATION
+  if(name === "" || phone === "" || address === ""){
+    alert("Please fill all details.");
     return;
   }
 
   // COD → Success Page
-  if(pay === "COD"){
+  if(payment === "cod"){
     window.location.href =
-      `success.html?model=${product}&price=${price}&name=${name}&phone=${phone}`;
+      `success.html?model=${encodeURIComponent(product)}&price=${encodeURIComponent(price)}&name=${encodeURIComponent(name)}&phone=${encodeURIComponent(phone)}`;
     return;
   }
 
-  // Prepaid → UPI Page
-  if(pay === "Prepaid"){
+  // PREPAID → UPI PAGE
+  if(payment === "prepaid"){
     window.location.href =
-      `upi.html?model=${product}&price=${price}&name=${name}&phone=${phone}`;
+      `upi.html?model=${encodeURIComponent(product)}&price=${encodeURIComponent(price)}&name=${encodeURIComponent(name)}&phone=${encodeURIComponent(phone)}`;
+    return;
   }
 }
 </script>
