--- a/sucess.html
+++ b/sucess.html
@@ -4,146 +4,73 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Order Successful – HIGH CHOICE</title>
-<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
-:root{
-  --bg:#0e0f19;
-  --text:#ffffff;
-  --muted:#bfbfd2;
-  --accent:#7effc9;
-  --card:rgba(255,255,255,0.1);
-}
-
-*{margin:0;padding:0;box-sizing:border-box}
 body{
-  background:var(--bg);
-  font-family:"Poppins",system-ui,Roboto;
-  color:var(--text);
-}
-
-header{
-  padding:14px 18px;
-  display:flex;justify-content:center;
-  background:rgba(0,0,0,0.35);
-  border-bottom:1px solid rgba(255,255,255,0.05);
-  backdrop-filter:blur(8px);
-}
-header img{height:38px}
-
-main{
-  max-width:600px;margin:auto;padding:24px;
+  background:#0d0f1a;
+  color:white;
+  font-family:"Poppins",system-ui;
   text-align:center;
+  padding:40px 15px;
 }
 
-.success-icon{
-  font-size:80px;
-  color:var(--accent);
-  margin-bottom:14px;
-}
-
-h2{
-  font-size:26px;
-  font-weight:800;
-  color:var(--accent);
-  margin-bottom:10px;
-}
-
-.details{
-  background:var(--card);
-  padding:20px;
+.box{
+  background:#1a1e2d;
+  padding:25px;
   border-radius:16px;
-  border:1px solid rgba(255,255,255,0.08);
-  margin-top:18px;
-  text-align:left;
-  font-size:16px;
-  line-height:28px;
+  max-width:480px;
+  margin:auto;
+  border:1px solid rgba(255,255,255,0.1);
+}
+
+h1{
+  color:#7effc9;
+  margin-bottom:12px;
+}
+
+p{
+  color:#bfbfd2;
+  font-size:15px;
 }
 
 .btn{
-  width:100%;
-  padding:14px;
-  margin-top:20px;
-  border:none;
-  border-radius:12px;
-  background:var(--accent);
-  color:#000;
-  font-weight:800;
-  cursor:pointer;
+  background:#7effc9;
+  padding:12px 20px;
+  display:inline-block;
+  color:black;
+  margin-top:22px;
+  font-weight:700;
+  border-radius:10px;
+  text-decoration:none;
   font-size:16px;
-}
-
-footer{
-  text-align:center;color:var(--muted);
-  padding:26px 10px;margin-top:30px;
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <img src="highchoice_logo.png">
-</header>
+<div class="box">
+  <h1>✔ Order Placed Successfully!</h1>
+  <p>Your order has been confirmed by HIGH CHOICE.</p>
 
-<main>
+  <h3 id="model"></h3>
+  <h3 id="price"></h3>
+  <h4 id="payment"></h4>
 
-  <div class="success-icon">✔</div>
-
-  <h2>Order Placed Successfully!</h2>
-  <p>Thank you for shopping with <strong>HIGH CHOICE</strong>.</p>
-
-  <div class="details">
-    <p><strong>Product:</strong> <span id="pName"></span></p>
-    <p><strong>Price:</strong> ₹<span id="pPrice"></span></p>
-    <p><strong>Name:</strong> <span id="cName"></span></p>
-    <p><strong>Phone:</strong> <span id="cPhone"></span></p>
-  </div>
-
-  <button class="btn" onclick="sendWhatsApp()">View Order on WhatsApp</button>
-
-</main>
-
-<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
+  <a href="index.html" class="btn">Back to Home</a>
+</div>
 
 <script>
-// SAFELY extract URL data (no undefined error)
-const params = new URLSearchParams(window.location.search);
+const p = new URLSearchParams(window.location.search);
 
-const model  = params.get("model") || "Unknown Product";
-const price  = params.get("price") || "0";
-const name   = params.get("name") || "Customer";
-const phone  = params.get("phone") || "Not Provided";
+document.getElementById("model").textContent =
+  "Product: " + (p.get("model") || "N/A");
 
-// Put values on page
-document.getElementById("pName").innerText  = model;
-document.getElementById("pPrice").innerText = price;
-document.getElementById("cName").innerText  = name;
-document.getElementById("cPhone").innerText = phone;
+document.getElementById("price").textContent =
+  "Price: ₹" + (p.get("price") || "0");
 
-// FIXED WhatsApp Number (NO +91)
-const clientNumber = "917869288078";
-
-// FIXED WhatsApp Message System
-function sendWhatsApp(){
-
-  let msg = 
-`🟢 *NEW ORDER RECEIVED*
-
-📦 *Product:* ${model}
-💰 *Price:* ₹${price}
-
-👤 *Customer:* ${name}
-📞 *Phone:* ${phone}
-
-Please confirm the order.`;
-
-
-  const waURL = "https://wa.me/" + clientNumber + "?text=" + encodeURIComponent(msg);
-
-  // Direct redirect (no popup block)
-  window.location.href = waURL;
-}
+document.getElementById("payment").textContent =
+  "Payment Method: " + (p.get("payment") || "N/A");
 </script>
 
 </body>
