--- a/rolex.html
+++ b/rolex.html
@@ -152,6 +152,8 @@ function toggleMenu(){
             <div class="slide visible"><img src="yachtmaster1.jpg"></div>
             <div class="slide"><img src="yachtmaster2.jpg"></div>
             <div class="slide"><img src="yachtmaster3.jpg"></div>
+    <div class="slide"><img src="datedate_shift4.jpg"></div>
+<div class="slide"><img src="datedate_shift5.jpg"></div>
         </div>
         <div class="dots"></div>
         <h3>Rolex Yachtmaster Automatic</h3>
