--- a/rolex.html
+++ b/rolex.html
@@ -170,7 +170,7 @@ function toggleMenu(){
 <div class="slide"><img src="datedate_shift5.jpg"></div>
         </div>
         <div class="dots"></div>
-        <h3>Rolex Datedate Shift Movement</h3>
+        <h3>Rolex Daydate Shift Movement</h3>
         <div class="price">₹1699/-</div>
         <button class="btn" onclick="location.href='order.html?model=Rolex Datedate Shift&price=1699'">Buy Now</button>
     </div>
